include/zyre.h

//  *** Draft method, for development use, may change without warning ***
//  Leave a group
ZYRE_EXPORT int
    zyre_leave (zyre_t *self, const char *group);
//  *** Draft method, for development use, may change without warning ***
//  Receive next message from network; the message may be a control
//  message (ENTER, EXIT, JOIN, LEAVE) or data (WHISPER, SHOUT).   
//  Returns zmsg_t object, or NULL if interrupted                  
ZYRE_EXPORT zmsg_t *
    zyre_recv (zyre_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Send message to single peer, specified as a UUID string
//  Destroys message after sending                         
ZYRE_EXPORT int
    zyre_whisper (zyre_t *self, const char *peer, zmsg_t **msg_p);
//  *** Draft method, for development use, may change without warning ***
//  Send message to a named group 
//  Destroys message after sending
ZYRE_EXPORT int
    zyre_shout (zyre_t *self, const char *group, zmsg_t **msg_p);
//  *** Draft method, for development use, may change without warning ***
//  Send formatted string to a single peer specified as UUID string
ZYRE_EXPORT int
    zyre_whispers (zyre_t *self, const char *peer, const char *format, ...) CHECK_PRINTF (3);
//  *** Draft method, for development use, may change without warning ***
//  Send formatted string to a named group
ZYRE_EXPORT int
    zyre_shouts (zyre_t *self, const char *group, const char *format, ...) CHECK_PRINTF (3);
//  *** Draft method, for development use, may change without warning ***
//  Return zlist of current peer ids.
//  Caller owns return value and must destroy it when done.
ZYRE_EXPORT zlist_t *
    zyre_peers (zyre_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Return zlist of currently joined groups.
//  Caller owns return value and must destroy it when done.
ZYRE_EXPORT zlist_t *
    zyre_own_groups (zyre_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Return zlist of groups known through connected peers.
//  Caller owns return value and must destroy it when done.
ZYRE_EXPORT zlist_t *
    zyre_peer_groups (zyre_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Return the endpoint of a connected peer.
//  Caller owns return value and must destroy it when done.
ZYRE_EXPORT char *
    zyre_peer_address (zyre_t *self, const char *peer);
//  *** Draft method, for development use, may change without warning ***
//  Return the value of a header of a conected peer. 
//  Returns null if peer or key doesn't exits.       
//  Caller owns return value and must destroy it when done.
ZYRE_EXPORT char *
    zyre_peer_header_value (zyre_t *self, const char *peer, const char *name);
//  *** Draft method, for development use, may change without warning ***
//  Return socket for talking to the Zyre node, for polling
ZYRE_EXPORT zsock_t *
    zyre_socket (zyre_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Print zyre node information to stdout
ZYRE_EXPORT void
    zyre_print (zyre_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Return the Zyre version for run-time API detection
ZYRE_EXPORT void
    zyre_version (int *major, int *minor, int *patch);
//  *** Draft method, for development use, may change without warning ***
//  Self test of this class.
ZYRE_EXPORT void
    zyre_test (bool verbose);